--- a/css/styles.css
+++ b/css/styles.css
@@ -3,28 +3,42 @@ font-family: 'Allerta', sans-serif;
 font-family: 'Montserrat', sans-serif; 
 */
 body {
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
   font-family: 'Allerta', sans-serif;
   margin: 0;
 }
 
-button {
-  border-radius: 5px;
-  background: #9c540c;
-  padding: 7px;
-  color: white;
-  border: none;
+main {
+  flex: 1;
 }
-label{
+.button {
+
+  border: none;
+  border-radius: 12px;
+  background: #9c540c;
+  color: white;
+  cursor: pointer;
+  font-size: 16px;
+  /* 8px en top y bottom, 12px right y left */
+  padding: 8px 12px;
+  text-decoration: none;
+  /* Arrancar de derecha y se va ir hacia la izquierda, colores degradado*/
+  background: linear-gradient(to left, #8a4b0c, #dd944c);
+ 
+}
+label {
   margin-top: 10px;
 }
 
-input, textarea{
+input, textarea {
   outline: 0;
   border-radius: 7px;
   border: 1px solid #835835;
 }
 
-input:focus,textarea:focus{
+input:focus, textarea:focus {
   background: #fce3c3;
 }
 
@@ -34,18 +48,40 @@ input[type='radio']:checked:after {
   border-radius: 15px;
   position: relative;
   background-color: #836123;
+  content:''; 
+  display: inline-block;
+  visibility: visible;
+  border: 2px solid white;
+}
+
+input[type='checkbox']:checked:after {
+  width: 10px;
+  height: 10px;
+  position: relative;
+  background-color: #977639;
   content:'';
   display: inline-block;
   visibility: visible;
   border: 2px solid white;
 }
+
+
+/* Una buena practica tener estilos centralizados */
 .contenedor {
-  width: 800px;
+  position: relative;
+  max-width: 800px;
   margin: auto;
 }
 
+.background-general {
+  background: #3a2b29;
+  box-shadow: 0 0 15px 0 rgba(0, 0, 0, 0.4);
+  height: 85px;
+  color: white;
+}
+
 .titulo {
-  font-family: 'Poppins', sans-serif;
+  font-family: 'Montserrat', sans-serif; 
   font-size: 70px;
   margin-top: 70px;
   margin-bottom: 0px;
@@ -62,16 +98,16 @@ input[type='radio']:checked:after {
 }
 
 .cafes {
+  margin-top: 60px;
+  margin-bottom: -60px;
   color: #412B19;
-  margin-bottom: 60px;
 }
 
 /* SELECTOR DESCENDENTE */
 .cafes h2 {
-  font-family: 'Montserrat', sans-serif;
+  font-family: 'Montserrat', sans-serif; 
   font-size: 35px;
 }
-
 /* El background puede ser un color o imagen */
 
 .portada {
@@ -79,6 +115,7 @@ input[type='radio']:checked:after {
   background-size: cover;
   color: white;
   padding: 20px;
+  height: 500px;
 }
 
 .portada button {
@@ -104,6 +141,10 @@ input[type='radio']:checked:after {
 
 .logotipo {
   display: inline-block;
+  font-family: 'Pacifico', cursive;
+  font-size: 50px;
+  margin-left:0;
+  margin-top: -12px
 }
 
 .header {
@@ -111,49 +152,25 @@ input[type='radio']:checked:after {
 }
 
 .footer {
-  padding: 70px 0px 10px 0px;
-  background: #603813;
-  /* fallback for old browsers */
-  background: -webkit-linear-gradient(to bottom, #b29f94, #603813);
-  /* Chrome 10-25, Safari 5.1-6 */
-  background: linear-gradient(to bottom, #b29f94, #603813);
-  /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-
+  background: #C29B61;
+  padding: 50px 10px;
 }
-
-/* ESTAS OLAS LAS PUSE SOLO POR CURIOSIDAD */
-.ola {
-  position: absolute;
-  top: 338px;
-  left: 0;
-  width: 100%;
-}
-
-.ola2 {
-  position: relative;
-  transform: rotate(180deg);
-  bottom: 385px;
-  left: 0px;
-  width: 100%;
-
-}
-
 .cafe {
   padding: 10px;
-  margin: 10px;
-  border: 1px solid #412B19;
-  /* overflow: hidden;  para que no desborden nuestras imagenes*/
+  margin: 10px 10px 40px 10px;
+  /* border: 1px solid #412B19; */
+ /* overflow: hidden;  para que no desborden nuestras imagenes*/
   border-radius: 8px;
+  box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.4);
 }
 
 .cafe ol {
-  padding: 0;
+  padding:0;
 }
 
 .cafe.granoscafe {
   height: 190px;
 }
-
 .right {
   float: right;
   position: relative;
@@ -163,22 +180,19 @@ input[type='radio']:checked:after {
 .left {
   float: left;
   position: relative;
-  z-index: 10;
+  top: -120px;
 }
 
-/* Una buena practica tener estilos centralizados */
-
-
 .contenedor-cafe-a {
-  padding-left: 20px;
   position: relative;
   bottom: 36px;
+  padding-left: 20px;
 }
 
 .contenedor-cafe-b {
-  margin-left: 370px;
   position: relative;
-  bottom: 115px;
+  bottom: 85px;
+  margin-left: 370px;
 }
 
 .contacto {
@@ -186,47 +200,39 @@ input[type='radio']:checked:after {
   width: 300px;
   flex-wrap: wrap;
 }
-
 .contacto img {
   display: block;
 }
 
 .contacto strong {
-  display: block;
+  display:block;
 }
 
 .contacto a {
   color: white;
   text-decoration: none;
   /*TOP, RIGHT BOTTOM, LEFT*/
-  margin: 22px 10px 10px 0;
+  margin: 10px 10px 10px 0;
 }
 
 .footer .contenedor {
   display: flex;
   justify-content: space-between;
-  position: relative;
-  bottom: -100px;
 }
 
 .formulario {
   display: flex;
   color: white;
-  width: 400px;
+  width: 430px;
   /* padding-top: 50px;
   padding-right: 10px;
   padding-left: 10px;
   padding-bottom: 50px; */
 
-  /* padding: 50px 10px; */
+  /* padding: 50px 10px;  */
 }
-
-/* vamos a darle clases a las 2 columnas */
-
-.col1, .col2{
-display: flex;
-flex-direction: column;
-}
+/* Esto es un comentario*/
+/* vamos darle estilos a las clases col1 y col2 */
 
 .col1, .col2 {
   display: flex;
@@ -245,10 +251,8 @@ flex-direction: column;
   margin-top:15px;
 }
 
-
 .intereses label {
    font-size: 12px;
-   margin-left: 33px;
 }
 
 .formulario label, .generos, .intereses {
@@ -260,10 +264,55 @@ flex-direction: column;
   font-size: 12px;
 }
 
-.intereses{
-  position: absolute;
-  display: flex;
-  flex-direction: column;
-  top: 160px;
-  left: 370px;
+/* Tablas */
+
+table {
+  width: 100%; /* toma el 100% de tu padre contenedor que tiene los 800px */
+  margin-bottom: 60px;
 }
+
+th {
+  background-color: #3a2b29;
+  color: white;
+  padding: 10px 20px;
+}
+
+td {
+  padding: 20px;
+}
+
+table, td, th {
+  font-size: 20px;
+  border: 0;
+  /* border: 1px solid #C29B61;
+  border-collapse: collapse; */
+}
+i {
+  font-size: 12px;
+}
+.precio {
+  font-size: 12px;
+  padding: 15px 7px;
+  width: 35px;
+  color: white;
+  text-align: center;
+  background: #9c540c ;
+  border-radius: 50%;
+}
+.titulo-precio {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  color: #3a2b29;
+  font-size: 45px;
+  font-family: 'Pacifico', cursive;
+  margin-top: 20px;
+  margin-bottom: 40px;
+}
+
+.tabla {
+  margin: 50px 0;
+  
+}
+
+
