--- a/css/styles-responsive.css
+++ b/css/styles-responsive.css
@@ -1,4 +1,20 @@
-/* Tablas */
+.burguer-button {
+  width: 40px;
+  border-radius: 50%;
+  line-height: 35px;
+  height: 40px;
+  text-align: center;
+  background: #dd944c;
+  display: inline-block;
+  position: fixed;
+  left: 20px;
+  top: 20px;
+  z-index: 3;
+  display: none;
+}
+
+
+/* INICIO DE TABLET */
 
 /* 768 para tables y esta dentro de los 800px que vamos a trabajar */
 @media screen and (max-width: 800px) {
@@ -55,58 +71,177 @@
 
 }
 
-@media sc5reen and (max-width: 767px) {
-/*footer*/
-textarea{
-  width: 100%;
-}
-.footer, .contenedor {
-  display: block;
-}
-.footer img{
-  width: 250px;
+/* FIN DE TABLET */
+
+/* Cualquier dimension que sea inferior a 767 vamos a cambiar al footer*/
+
+@media screen and (max-width: 767px) {
+  /* footer */
+  textarea {
+    width: 100%;
+  }
+  .footer .contenedor {
+    display: block;
+  }
+
+  .footer img {
+    width: 250px;
+  }
+  .contacto {
+    display: flex;
+    justify-content: center;
+    margin: 0 auto;
+  }
+
+  .generos label {
+    font-size: 16px;
+  }
+
+  .intereses label {
+    display: block;
+    font-size: 16px;
+  }
+
+  .formulario {
+    display: block;
+    width: 300px;
+    margin: 0 auto;
+  }
+
+  .formulario .button {
+    width: 100%;
+    box-shadow: 0 0 10px 0 rgba(0,0,0, 0.24);
+  }
+
+  .col1 {
+    margin: 0;
+  }
+
+  /* selectores de atributo*/
+  input[type="text"],
+  input[type="email"] {
+    font-size: 16px;
+    padding: 5px;
+  }
+
+  input[type="radio"],
+  input[type="checkbox"] {
+    position: relative;
+    top: 3px;
+    zoom: 1.5;
+  }
+
+
+  /* fin del footer */
 }
 
-.contacto{
-  display: flex;
-  justify-content: center;
-  margin: 0 auto;
+@media screen and (max-width: 650px) {
+  .header{
+    text-align: center;
+  }
+  .logotipo {
+    margin: 0;
+  }
+  .menu {
+    position: static;
+    display: block;
+  }
+  .menu li:first-child {
+    margin: 0;
+  }
+
+  .menu ul {
+    padding: 0;
+  }
 }
 
-.generos label{
-  font-size: 16px;
-}
-.intereses label{
-  display: block;
-  font-size: 16px;
-}
-.formulario{
-  display: block;
-  width: 360px;
-  margin: 0 auto;
+/* Celulares */
+@media screen and (max-width: 500px) {
+
+  /* PORTADA */
+  .portada .button {
+    display: block;
+  }
+
+  .burguer-button {
+    display: block;
+  }
+  
+  .portada .contenedor {
+    position: static;
+  }
+  /*PAGINA DE PRECIOS*/
+  .header {
+    position: static;
+  }
+  .header .contenedor {
+    position: static;
+  }
+  .titulo-precio {
+    font-size: 32px;
+  }
+
+  .titulo-precio img {
+    width: 60px;
+  }
+
+  /* FIN PAGINA DE PRECIOS*/
+  .menu {
+    /* border: 1px solid tomato; */
+    position: fixed;
+    left: -100%;
+    top: 0;
+    right:0;
+    bottom:0;
+    z-index: 2;
+    background-color: rgba(156, 84, 12, .8);
+    width: 100%;
+    display: flex;
+    align-items: center;
+    transition: .3s;
+  }
+
+  .menu.active {
+    left:0;
+  }
+  .menu li {
+    display: block;
+    margin: 0;
+    padding: 8px 0;
+    border-bottom: 1px solid white;
+  }
+
+  .menu ul {
+    flex: 1; /* hace que los items home, cafes y precios tomen todo el ancho de la pantalla */
+  }
+
+  .menu li:first-child {
+    border-top: 1px solid white;
+  }
+
+  .portada {
+    text-align: center;
+  }
+
+  .titulo {
+    font-size: 35px;
+  }
+  .title-a {
+    font-size: 15px;
+  }
+  /* FIN DE PORTADA */
+
+  /* CAFES */
+  .cafe img {
+    width: 200px;
+  }
+
+  .title-b {
+    font-size: 30px;
+  }
+  /* FIN CAFES*/
 }
 
-.formulario .button{
-  width: 100%;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.24);
-}
-.col1{
-  margin: 0;
-}
 
-/*selectores de atributo*/
-input[type="text"],
-input[type="gmail"]{
-  font-size: 16px;
-  padding: 5px;
-}
+/* Fin de Celulares */
 
-input[type="radio"],
-input[type="checkbox"]{
-  position: relative;
-  top: 3px;
-  zoom: 1.5;
-}
-
-/* fin del footer */
-}
